Fix add to calendar and rsvp alignment

--- a/assets/stylesheets/common/events.scss
+++ b/assets/stylesheets/common/events.scss
@@ -160,7 +160,7 @@
 
   .event-label {
     margin-top: 7px;
-    margin-right: 15px;
+    margin-right: 10px;
     line-height: 18px;
     display: inline-block;
 
@@ -170,7 +170,7 @@
   }
 
   .event-rsvp {
-    margin-top: 7px;
+    margin-top: 6px;
   }
 }
 
@@ -189,7 +189,8 @@
 .add-to-calendar {
   position: relative;
   display: inline-block;
-  margin-left: 7px;
+  margin-right: 10px;
+  margin-top: 6px;
 
   .dropdown-menu {
     top: 24px;
@@ -559,7 +560,8 @@ ul.events-calendar-events {
 }
 
 .event-rsvp {
-  display: inline-block;
+  display: flex;
+  align-items: center;
 
   button {
     margin-right: 7px;
@@ -573,7 +575,8 @@ ul.events-calendar-events {
 }
 
 .event-rsvp-details {
-  display: inline-block;
+  display: flex;
+  align-items: center;
 
   a {
     margin-right: 7px;
